[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://t1.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="main" type="TextEdit" parent="."]
margin_left = 7.0
margin_top = 11.0
margin_right = 1230.0
margin_bottom = 318.0
custom_fonts/font = ExtResource( 2 )
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -7.64824, 444.494 )
__meta__ = {
"_edit_group_": true
}

[node name="t1" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t2" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t3" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t4" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t5" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t6" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t7" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t8" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t9" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t10" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t11" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t12" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t13" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t14" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t15" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t16" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t17" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t18" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t19" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t20" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t21" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t22" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t23" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t24" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t25" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t26" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t27" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t28" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t29" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t30" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t31" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t32" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t33" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t34" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t35" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t36" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t37" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t38" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t39" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t40" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t41" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t42" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t43" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t44" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t45" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t46" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t47" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t48" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t49" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t50" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t51" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t52" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t53" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t54" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t55" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t56" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t57" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t58" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t59" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t60" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t61" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t62" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t63" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t64" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t65" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t66" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t67" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t68" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t69" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t70" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t71" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t72" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t73" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t74" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t75" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t76" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t77" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t78" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t79" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t80" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t81" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t82" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t83" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t84" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t85" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t86" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t87" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t88" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t89" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t90" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t91" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t92" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t93" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t94" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t95" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t96" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t97" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t98" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t99" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t100" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t101" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t102" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t103" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t104" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t105" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t106" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t107" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t108" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t109" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t110" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t111" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t112" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t113" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t114" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t115" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t116" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t117" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t118" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t119" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t120" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t121" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t122" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t123" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t124" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t125" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t126" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t127" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t128" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t129" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t130" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t131" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t132" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t133" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t134" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t135" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t136" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t137" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t138" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t139" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t140" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t141" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t142" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t143" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t144" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t145" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t146" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t147" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t148" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t149" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="t150" parent="Node2D" instance=ExtResource( 4 )]
margin_right = 1240.0
fit_content_height = true

[node name="HSlider" type="HSlider" parent="."]
margin_left = 12.0
margin_top = 332.0
margin_right = 1224.0
margin_bottom = 348.0
min_value = 1.0
max_value = 600.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 15.0803
margin_top = 352.403
margin_right = 55.0803
margin_bottom = 366.403
text = "---"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 15.0803
margin_top = 370.809
margin_right = 55.0803
margin_bottom = 384.809
text = "---"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 249.146
margin_top = 370.809
margin_right = 289.146
margin_bottom = 384.809
text = "---"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 479.659
margin_top = 349.59
margin_right = 601.659
margin_bottom = 386.59
focus_mode = 0
text = "Find best fit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main2" type="TextEdit" parent="."]
visible = false
margin_left = 1043.0
margin_top = 625.0
margin_right = 1651.0
margin_bottom = 998.0
custom_fonts/font = ExtResource( 2 )
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="main" to="." method="do_text_update"]
[connection signal="value_changed" from="HSlider" to="." method="update_size"]
[connection signal="pressed" from="Button" to="." method="find_best_fit"]
